--- a/PW-1_TV-13_NowotkaViktoriia/app/src/main/AndroidManifest.xml
+++ b/PW-1_TV-13_NowotkaViktoriia/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PW1"
+        android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -19,10 +19,12 @@
             android:theme="@style/Theme.PW1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".FirstCalculatorActivity" />
+        <activity android:name=".SecondCalculatorActivity" />
     </application>
 
 </manifest>
